deployment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectscheduler
  labels:
    app: projectscheduler
spec:
  selector:
    matchLabels:
      app: projectscheduler
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: projectscheduler
    spec:
      containers:
      - name: projectscheduler
        image: jeremypunsalandotcom/projectscheduler:latest
        imagePullPolicy: Always
