deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectscheduler
  labels:
    app: projectscheduler
spec:
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: projectscheduler
  type: NodePort
